force-app/main/default/objects/Opportunity/fields/Agreement_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Due_Date__c</fullName>
    <label>Agreement Due Date</label>
    <type>Date</type>
</CustomField>