force-app/main/default/objects/Opportunity/fields/Agreement_Value_with_GST__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_with_GST__c</fullName>
    <formula>Agreement_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Value with GST(₹)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>