force-app/main/default/objects/Opportunity/fields/Allotment_Letter_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Allotment_Letter_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allotment Letter Submitted</label>
    <type>Checkbox</type>
</CustomField>