force-app/main/default/objects/Opportunity/fields/Amount_To_Refund__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Refund__c</fullName>
    <label>Amount To Refund</label>
    <summarizedField>Payment__c.Amount_To_Refund__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>success</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment__c.Is_Refund_Success__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>