force-app/main/default/objects/Opportunity/fields/AOS_Authority_Person__c.field-meta.xml
<CustomField>
    <fullName>AOS_Authority_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AOS Authority Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>