force-app/main/default/objects/Opportunity/fields/AOS_Handover_Type__c.field-meta.xml
<CustomField>
    <fullName>AOS_Handover_Type__c</fullName>
    <label>AOS Handover Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Hand</fullName>
            </value>
            <value>
                <fullName>By Courier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>