force-app/main/default/objects/Opportunity/fields/AOS_Stage__c.field-meta.xml
<CustomField>
    <fullName>AOS_Stage__c</fullName>
    <label>AOS Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Drafting</fullName>
            </value>
            <value>
                <fullName>Draft Uploaded</fullName>
            </value>
            <value>
                <fullName>Initiate</fullName>
                <label>Initiated</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Ready to dispatch</fullName>
            </value>
            <value>
                <fullName>Ready to print</fullName>
                <isActive>false</isActive>
                <label>Ready to print</label>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Send to the customer</fullName>
            </value>
            <value>
                <fullName>Sent Approval</fullName>
            </value>
            <value>
                <fullName>Waitng for customer response</fullName>
                <isActive>false</isActive>
                <label>Waitng for customer response</label>
            </value>
            <value>
                <fullName>Yet to prepare</fullName>
                <isActive>false</isActive>
                <label>Yet to prepare</label>
            </value>
            <value>
                <fullName>Yet to sign Epitome</fullName>
                <isActive>false</isActive>
                <label>Yet to sign Epitome</label>
            </value>
            <value>
                <fullName>Yet to sign purchaser</fullName>
                <isActive>false</isActive>
                <label>Yet to sign purchaser</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>