force-app/main/default/objects/Opportunity/fields/Balance_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due_Amount__c</fullName>
    <label>Balance Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>