force-app/main/default/objects/Opportunity/fields/Base_Price_per_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_per_Sq_Ft__c</fullName>
    <formula>Unit__r.Base_Price_per_Sq_Ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Price per Sq. Ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>