force-app/main/default/objects/Opportunity/fields/Board_Of_Resolution_Authority_Person__c.field-meta.xml
<CustomField>
    <fullName>Board_Of_Resolution_Authority_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Board Of Resolution Authority Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>