force-app/main/default/objects/Opportunity/fields/Booking_Form__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Form</label>
    <type>Checkbox</type>
</CustomField>