force-app/main/default/objects/Opportunity/fields/BR_Status__c.field-meta.xml
<CustomField>
    <fullName>BR_Status__c</fullName>
    <label>BR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Waiting for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Request for Digital Signature</fullName>
            </value>
            <value>
                <fullName>Ready for Digital Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>