force-app/main/default/objects/Opportunity/fields/Bulk_Booking__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulk Booking</label>
    <type>Checkbox</type>
</CustomField>