force-app/main/default/objects/Opportunity/fields/Cancellation_Charges__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Charges__c</fullName>
    <formula>Collected_Amount__c -  Amount_To_Refund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>