force-app/main/default/objects/Opportunity/fields/Cancellation_Status__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Status__c</fullName>
    <label>Cancellation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Received</fullName>
            </value>
            <value>
                <fullName>Sent for Approval</fullName>
            </value>
            <value>
                <fullName>Request Rejected</fullName>
            </value>
            <value>
                <fullName>Refund Initiated</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>