force-app/main/default/objects/Opportunity/fields/Collected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Collected_Amount__c</fullName>
    <label>Collected Amount</label>
    <summarizedField>Payment__c.Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>