force-app/main/default/objects/Opportunity/fields/Collected_Amount_From_Payment__c.field-meta.xml
<CustomField>
    <fullName>Collected_Amount_From_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Collected Amount From Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>