force-app/main/default/objects/Opportunity/fields/Custom_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Custom_Email_Body__c</fullName>
    <label>Custom Email Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>