force-app/main/default/objects/Opportunity/fields/Custom_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Custom_Email_Subject__c</fullName>
    <label>Custom Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>