force-app/main/default/objects/Opportunity/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Judiciary</fullName>
            </value>
            <value>
                <fullName>Non-Judiciary</fullName>
            </value>
            <value>
                <fullName>SBI</fullName>
            </value>
            <value>
                <fullName>Non-SBI</fullName>
            </value>
            <value>
                <fullName>IDBI</fullName>
            </value>
            <value>
                <fullName>Non-IDBI</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>