force-app/main/default/objects/Opportunity/fields/Date_of_Blocking__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Blocking__c</fullName>
    <label>Date of Blocking</label>
    <type>Date</type>
</CustomField>