force-app/main/default/objects/Opportunity/fields/Date_of_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Cancellation__c</fullName>
    <label>Date of Cancellation</label>
    <type>Date</type>
</CustomField>