force-app/main/default/objects/Opportunity/fields/Date_of_Possession__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Possession__c</fullName>
    <label>Date of Possession</label>
    <type>Date</type>
</CustomField>