force-app/main/default/objects/Opportunity/fields/Desired_Status__c.field-meta.xml
<CustomField>
    <fullName>Desired_Status__c</fullName>
    <label>Desired Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Launch</fullName>
            </value>
            <value>
                <fullName>Under Construction</fullName>
            </value>
            <value>
                <fullName>Nearing Completion</fullName>
            </value>
            <value>
                <fullName>Ready for Possession</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>