force-app/main/default/objects/Opportunity/fields/Digital_Signature_Approval__c.field-meta.xml
<CustomField>
    <fullName>Digital_Signature_Approval__c</fullName>
    <label>Digital Signature Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>