force-app/main/default/objects/Opportunity/fields/Documents_URL__c.field-meta.xml
<CustomField>
    <fullName>Documents_URL__c</fullName>
    <label>Loan Document Link</label>
    <type>Url</type>
</CustomField>