force-app/main/default/objects/Opportunity/fields/Easy_Collect_Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Easy_Collect_Payment_Link__c</fullName>
    <label>Easy Collect Payment Link</label>
    <type>Url</type>
</CustomField>