force-app/main/default/objects/Opportunity/fields/Final_Unit_Cancellation_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Final_Unit_Cancellation_Approval_Status__c</fullName>
    <label>Final Unit Cancellation Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>