force-app/main/default/objects/Opportunity/fields/First_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Booking_Amount__c</fullName>
    <label>Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>