force-app/main/default/objects/Opportunity/fields/gupshup_crm__TrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>gupshup_crm__TrackingNumber__c</fullName>
    <label>Tracking Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>