force-app/main/default/objects/Opportunity/fields/gupshup_crm__WhatsApp_Global_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>gupshup_crm__WhatsApp_Global_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gupshup Global Opt In</label>
    <type>Checkbox</type>
</CustomField>