force-app/main/default/objects/Opportunity/fields/Is_Demand_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Demand_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Demand Letter Sent</label>
    <type>Checkbox</type>
</CustomField>