force-app/main/default/objects/Opportunity/fields/is_Draft_Aos_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>is_Draft_Aos_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Draft Aos Uploaded?</label>
    <type>Checkbox</type>
</CustomField>