force-app/main/default/objects/Opportunity/fields/is_NOC_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>is_NOC_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is NOC Uploaded</label>
    <type>Checkbox</type>
</CustomField>