force-app/main/default/objects/Opportunity/fields/is_Original_Cheque_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>is_Original_Cheque_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Original Cheque Uploaded</label>
    <type>Checkbox</type>
</CustomField>