force-app/main/default/objects/Opportunity/fields/Lead_Quote__c.field-meta.xml
<CustomField>
    <fullName>Lead_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>