force-app/main/default/objects/Opportunity/fields/Loan_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Outstanding_Amount__c</fullName>
    <formula>IF(
    ISPICKVAL(Funding_Type__c, &quot;Bank Fund&quot;),
    IF(
        Sale_Value_Amount__c - Loan_Sanctioned_Amount__c - Collected_Amount_From_Payment__c &lt; 0,
        0,
        Sale_Value_Amount__c - Loan_Sanctioned_Amount__c - Collected_Amount_From_Payment__c
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>