force-app/main/default/objects/Opportunity/fields/Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status__c</fullName>
    <label>Loan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Non Eligible</fullName>
            </value>
            <value>
                <fullName>Document Submitted</fullName>
            </value>
            <value>
                <fullName>Disbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>