force-app/main/default/objects/Opportunity/fields/New_Price__c.field-meta.xml
<CustomField>
    <fullName>New_Price__c</fullName>
    <label>New Price</label>
    <length>30</length>
    <type>Text</type>
</CustomField>