force-app/main/default/objects/Opportunity/fields/NOC__c.field-meta.xml
<CustomField>
    <fullName>NOC__c</fullName>
    <label>NOC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doc Submitted</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Corrections Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>