force-app/main/default/objects/Opportunity/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>