force-app/main/default/objects/Opportunity/fields/Old_Plot_Details__c.field-meta.xml
<CustomField>
    <fullName>Old_Plot_Details__c</fullName>
    <label>Old Plot Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>