force-app/main/default/objects/Opportunity/fields/Opportunity_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account_Name__c</fullName>
    <formula>Account.Name</formula>
    <label>Opportunity Account Name</label>
    <type>Text</type>
</CustomField>