force-app/main/default/objects/Opportunity/fields/Overall_Balance__c.field-meta.xml
<CustomField>
    <fullName>Overall_Balance__c</fullName>
    <label>Overall Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>