force-app/main/default/objects/Opportunity/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Registration</fullName>
            </value>
            <value>
                <fullName>Joint Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>