force-app/main/default/objects/Opportunity/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <formula>Total_Amount_Recieve__c /  Agreement_Value_with_GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>