force-app/main/default/objects/Opportunity/fields/Payment_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Outstanding_Amount__c</fullName>
    <formula>IF(Sale_Value_Amount__c - Collected_Amount_From_Payment__c &lt; 0, 0, Sale_Value_Amount__c - Collected_Amount_From_Payment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>