force-app/main/default/objects/Opportunity/fields/Plot_Name__c.field-meta.xml
<CustomField>
    <fullName>Plot_Name__c</fullName>
    <formula>Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plot Name</label>
    <type>Text</type>
</CustomField>