force-app/main/default/objects/Opportunity/fields/Plot_Size__c.field-meta.xml
<CustomField>
    <fullName>Plot_Size__c</fullName>
    <formula>Unit__r.Plot_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plot Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>