force-app/main/default/objects/Opportunity/fields/Primary_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Number__c</fullName>
    <description>Used Only For Gupshup Whatsapp Integration</description>
    <formula>VALUE(&quot;91&quot; &amp; Contact__r.Phone)</formula>
    <label>Primary Contact Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>