force-app/main/default/objects/Opportunity/fields/Registration_CRM_Head_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_CRM_Head_Approval_Status__c</fullName>
    <label>Registration CRM Head Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>