force-app/main/default/objects/Opportunity/fields/Registration_Date_Tentative__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date_Tentative__c</fullName>
    <label>Registration Date Tentative</label>
    <type>Date</type>
</CustomField>