force-app/main/default/objects/Opportunity/fields/Sale_Deed_Status__c.field-meta.xml
<CustomField>
    <fullName>Sale_Deed_Status__c</fullName>
    <label>Sale Deed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Drafting</fullName>
            </value>
            <value>
                <fullName>Draft Uploaded</fullName>
            </value>
            <value>
                <fullName>Sent to Approval</fullName>
            </value>
            <value>
                <fullName>Draft Approved</fullName>
            </value>
            <value>
                <fullName>Original Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>